--- a/config-template.json
+++ b/config-template.json
@@ -1,10 +1,10 @@
 {
   "open_ai_api_key": "YOUR API KEY",
   "single_chat_prefix": ["bot", "@bot"],
-  "single_chat_reply_prefix": "[bot] ",
+  "single_chat_reply_prefix": ["bot"],
   "group_chat_prefix": ["@bot"],
-  "group_name_white_list": ["ChatGPT测试群", "ChatGPT测试群2"],
-  "image_create_prefix": ["画", "看", "找"],
-  "conversation_max_tokens": 1000,
-  "character_desc": "你是ChatGPT, 一个由OpenAI训练的大型语言模型, 你旨在回答并解决人们的任何问题，并且可以使用多种语言与人交流。"
+  "group_name_white_list": ["群名1", "群名2"],
+  "image_create_prefix": ["画", "Design", "找"],
+  "conversation_max_tokens": 2000,
+  "character_desc": "我是人工智障 GPT, 一个由 OpenAI 训练的大型语言模型，版本为 GPT-3, 目前支持对话、搜索、画图。"
 }
